--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "firebase": "^8.2.4",
     "react": "^17.0.1",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.0",
+    "react-hook-form": "^6.14.2",
+    "react-icons": "^4.1.0",
+    "react-input-verification-code": "^0.6.4",
+    "react-multi-carousel": "^2.6.1",
+    "react-native-password-eye": "^1.0.2",
+    "react-native-vector-icons": "^8.0.0",
+    "react-password-mask": "^3.3.1",
+    "react-phone-number-input": "^3.1.10",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.28.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
